<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="10px"
  >
	  <Button android:id="@+id/btnDot"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_alignParentTop="true"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextDot"
	  />
	  <EditText android:id="@+id/txtDisplay"
	  android:layout_width="188px"
	  android:layout_height="63px"
	  android:layout_toRightOf="@id/btnDot"
	  android:focusable="false"
	  android:gravity="center_horizontal"
	  />
	  <Button android:id="@+id/btnOne"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/txtDisplay"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextOne"/>
	  <Button android:id="@+id/btnTwo"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/txtDisplay"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextTwo"
	  android:layout_toRightOf="@id/btnOne"/>	
	  <Button android:id="@+id/btnThree"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/txtDisplay"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextThree"
	  android:layout_toRightOf="@id/btnTwo"/>
	  <Button android:id="@+id/btnFour"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/txtDisplay"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextFour"
	  android:layout_toRightOf="@id/btnThree"/>  
	  <Button android:id="@+id/btnFive"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/btnOne"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextFive"/> 
	  <Button android:id="@+id/btnSix"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/btnOne"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextSix"
	  android:layout_toRightOf="@id/btnFive"/> 	 
	  <Button android:id="@+id/btnSeven"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/btnOne"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextSeven"
	  android:layout_toRightOf="@id/btnSix"/>  
	  <Button android:id="@+id/btnEight"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/btnOne"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextEight"
	  android:layout_toRightOf="@id/btnSeven"/>
	  <Button android:id="@+id/btnNine"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/btnFive"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextNine"/>
	  <Button android:id="@+id/btnZero"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/btnFive"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextZero"
	  android:layout_toRightOf="@id/btnNine"/>
	  <Button android:id="@+id/btnChange"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/btnFive"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextChange"
	  android:layout_toRightOf="@id/btnZero"/>
	  <Button android:id="@+id/btnOk"
	  android:layout_width="63px"
	  android:layout_height="63px"
	  android:layout_below="@id/btnFive"
	  style="@style/NumberButtonText"
	  android:text="@string/ButtonTextOk"
	  android:layout_toRightOf="@id/btnChange"/>
</RelativeLayout>
